# Hermes-wd

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.es.md  CONTRIBUTING.md  Dockerfile  README.es.md  README.md  README.zh-CN.md  SECURITY.es.md  SECURITY.md  cli-config.yaml.example  cli.py  hermes_constants.py  hermes_logging.py  hermes_state.py  hermes_time.py  mini_swe_runner.py  model_tools.py  package-lock.json  package.json  pyproject.toml  run_agent.py  setup.py  toolsets.py  trajectory_compressor.py  utils.py
.github/workflows/: e2e-windows.yml
acp_adapter/: session.py
acp_registry/: agent.json
agent/: agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  background_review.py  billing_view.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  coding_context.py  context_compressor.py  conversation_compression.py  conversation_loop.py  credential_pool.py  curator.py  curator_backup.py  image_gen_provider.py  memory_manager.py  memory_provider.py  message_content.py  model_metadata.py  oneshot.py  prompt_builder.py  redact.py  secret_scope.py  shell_hooks.py  skill_utils.py  system_prompt.py  title_generator.py  tool_executor.py  turn_context.py  turn_finalizer.py  turn_retry_state.py  usage_pricing.py
agent/transports/: chat_completions.py  codex.py
apps/desktop/: README.md  package.json
cron/: jobs.py  scheduler.py  scheduler_provider.py
docker/: stage2-hook.sh
docs/: chronos-managed-cron-contract.md  relay-connector-contract.md  session-lifecycle.md
docs/plans/: 2026-06-17-group-name-update-plan.md
docs/specs/: 2026-06-17-group-name-update-design.md
gateway/: authz_mixin.py  config.py  delivery.py  kanban_watchers.py  run.py  runtime_footer.py  session.py  session_context.py  slash_commands.py  status.py  stream_consumer.py  whatsapp_identity.py
gateway/relay/: __init__.py  adapter.py  auth.py  descriptor.py  transport.py  ws_transport.py
hermes_cli/: __init__.py  auth.py  auth_commands.py  backup.py  banner.py  cli_agent_setup_mixin.py  cli_commands_mixin.py  commands.py  config.py  container_boot.py  context_switch_guard.py  cron.py  curator.py  debug.py  doctor.py  dump.py  env_loader.py  gateway.py  gateway_enroll.py  gateway_windows.py  goals.py  inventory.py  kanban.py  kanban_db.py  kanban_swarm.py  main.py  managed_scope.py  mcp_security.py  mcp_startup.py  memory_oauth.py  memory_providers.py  memory_setup.py  model_setup_flows.py  model_switch.py  models.py  nous_auth_keepalive.py  nous_billing.py  plugins.py  profiles.py  provider_catalog.py  (+11 more)
hermes_cli/dashboard_auth/: public_paths.py
hermes_cli/subcommands/: dashboard.py  gateway.py  login.py  skills.py
locales/: es.yaml
nix/: devShell.nix  lib.nix  packages.nix
optional-mcps/unreal-engine/: manifest.yaml
plugins/cron/: __init__.py
plugins/hermes-achievements/: README.md
scripts/: install.ps1  install.sh  release.py
scripts/tests/: test-install-ps1-longpath.ps1
skills/computer-use/: SKILL.md
tests/: conftest.py  test_dashboard_sidecar_close_on_disconnect.py  test_delegate_cascade_49148.py  test_desktop_electron_pin.py  test_docker_webui_install_surface.py  test_hermes_constants.py  test_hermes_logging.py  test_hermes_state.py  test_install_ps1_native_stderr_eap.py  test_install_ps1_uv_powershell_host.py  test_install_sh_install_method_stamp.py  test_model_tools.py  test_packaging_metadata.py  test_tui_gateway_server.py  test_tui_mcp_late_refresh.py
tests/acp/: test_session.py
tests/agent/: test_anthropic_adapter.py  test_auxiliary_client.py  test_billing_view.py  test_codex_responses_adapter.py  test_coding_context.py  test_compression_count_warning_36908.py  test_compression_deferral_persistence.py  test_compression_interrupt_protection.py  test_compression_progress.py  test_compression_rotation_state.py  test_compression_success_notification.py  test_compressor_tool_call_budget.py  test_context_compressor.py  test_credential_pool.py  test_curator.py  test_curator_backup.py  test_empty_tool_name_loop_dampening.py  test_failover_identity.py  test_gemini_fast_fallback.py  test_memory_provider.py  test_memory_write_bridge.py  test_message_content.py  test_model_metadata.py  test_oneshot.py  test_platform_hint_overrides.py  test_prompt_builder.py  test_redact.py  test_secret_scope.py  test_system_prompt.py  test_title_generator.py  test_turn_context.py  test_turn_finalizer_cleanup_guard.py  test_turn_retry_state.py  test_usage_pricing.py
tests/cli/: test_cli_active_agent_ref_wiring.py  test_cli_force_redraw.py  test_cli_goal_interrupt.py  test_cli_init.py  test_cli_provider_resolution.py  test_cli_shutdown_memory_messages.py  test_cli_status_bar.py  test_prompt_text_input_thread_safety.py  test_worktree_sync_base.py
tests/computer_use/: test_cua_telemetry.py  test_doctor.py
tests/cron/: conftest.py  test_claim_job_for_fire.py  test_cron_script.py  test_jobs.py  test_jobs_changed_notify.py  test_run_one_job.py  test_scheduler.py  test_scheduler_provider.py  test_suggestions.py
tests/docker/: test_dashboard.py  test_immutable_install_permissions.py
tests/e2e/: conftest.py
tests/gateway/: conftest.py  feishu_helpers.py  test_13121_shutdown_inflight_transcript_flush.py  test_allowed_channels_widening.py  test_api_server.py  test_approval_prompt_redaction.py  test_async_delivery_capability.py  test_auto_continue.py  test_busy_session_ack.py  (+136 more)
tools/: approval.py  async_delegation.py  browser_tool.py  budget_config.py  checkpoint_manager.py  clarify_tool.py  code_execution_tool.py  computer_use_tool.py  cronjob_tools.py  delegate_tool.py  delegation_control_tool.py  file_operations.py  file_tools.py  fuzzy_match.py  image_generation_tool.py  kanban_tools.py  lazy_deps.py  mcp_tool.py  memory_tool.py  process_registry.py  send_message_tool.py  session_search_tool.py  skill_usage.py  skills_sync.py  terminal_tool.py  tts_tool.py  url_safety.py  video_generation_tool.py
tui_gateway/: entry.py  server.py
ui-tui/: README.md
web/: package.json  vitest.config.ts
website/: sidebars.ts
(+603 files in other folders)
